<resources>
    <string name="app_name">iRecite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">iRecite - Student Recitation App</string>

    <!-- nav drawer items -->
    <string name="nav_item_recitation">Recitation</string>
    <string name="nav_item_student_class">Student Class</string>
    <string name="nav_item_schedule">Schedule</string>
    <string name="nav_item_history">History</string>
    <!-- Recitation Menus -->
    <string name="action_delete_recitation">Delete Recitation</string>
    <string name="action_delete_all_recitation">Delete All Recitation</string>
    <!-- Class Recitation Menus -->
    <string name="action_start_class_recitation">Start Recitation</string>
    <!-- Student Class Menus -->
    <string name="action_new_class">New Class</string>
    <string name="action_delete_class">Delete Class</string>
    <string name="action_delete_all_class">Delete All Class</string>
    <!-- Student Menus -->
    <string name="action_add_student">Add Student</string>
    <string name="action_import_student">Import Student</string>
    <string name="action_delete_student">Delete Student</string>
    <string name="action_delete_all_student">Delete All Student</string>
    <!-- Schedule Menus -->
    <!-- All Menus -->
    <string name="action_settings">Settings</string>

    <!-- Dialogs -->
    <string name="dialog_ok">Ok</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>

</resources>
