<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Recitation -->
    <item
        android:id="@+id/action_delete_recitation"
        android:title="@string/action_delete_recitation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all_recitation"
        android:title="@string/action_delete_all_recitation"
        app:showAsAction="never" />

    <!-- Class Recitation -->
    <item
        android:id="@+id/action_start_recitation"
        android:title="@string/action_start_class_recitation"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always" />

    <!-- Student Class -->
    <item
        android:id="@+id/action_delete_class"
        android:title="@string/action_delete_class"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all_class"
        android:title="@string/action_delete_all_class"
        app:showAsAction="never" />

    <!-- Student -->

    <!-- Schedule -->

    <!-- All -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
