<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group_top">
        <item
            android:id="@+id/nav_recitation"
            android:icon="@drawable/ic_menu_recitation"
            android:title="@string/nav_item_recitation" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_menu_student"
            android:title="@string/nav_item_student_class" />
    </group>
    <group android:checkableBehavior="none"
        android:id="@+id/nav_group_bottom">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/nav_item_schedule" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_item_history" />
    </group>

</menu>
